# gbc-emulator

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/gameboy/: cartridge.hpp  clock.hpp  cpu.hpp  cpu_state.hpp  gameboy.hpp  gameboy_debugger.hpp  interrupt_scheduler.hpp  interrupt_type.hpp  mmu.hpp  ppu.hpp  serial_connection.hpp  synchronizer.hpp  timer.hpp  types.hpp
shaders/: glitch.glsl
shaders/colors/: color.glsl  cyan.glsl  magenta.glsl  yelo.glsl
src/embed_file/: CMakeLists.txt  embed_file.cpp  icon.rgba
src/gameboy/: CMakeLists.txt  cartridge.cpp  cpu.cpp  gameboy.cpp  interrupt_scheduler.cpp  mmu.cpp  ppu.cpp  timer.cpp
src/standalone_emulator/: CMakeLists.txt  application.cpp  application.hpp  application_toolbar.cpp  build_config.hpp.in  constants.hpp  emulation_window.cpp  emulation_window.hpp  init.cpp  init.hpp  logging.hpp  main.cpp  opengl_types.hpp
src/standalone_emulator/font/: fa_solid_font.h
src/standalone_emulator/shader/: shader.cpp  shader.hpp  shader_bank.cpp  shader_bank.hpp  shader_part.cpp  shader_part.hpp  uniform_handle.hpp
src/standalone_emulator/windows/: cpu_window.cpp  cpu_window.hpp  demo_window.cpp  demo_window.hpp  imgui_window.hpp  log_window.cpp  log_window.hpp  memory_window.cpp  memory_window.hpp  ppu_window.cpp  ppu_window.hpp  settings_window.cpp  settings_window.hpp
tests/: CMakeLists.txt  integrated_test.cpp
